Utvidet med metode for å finne policies for en bestemt informationTypeId