@@ -178,6 +178,16 @@ public class PolicyControllerIT {
         assertThat(responseEntity.getBody().getContent().size(), is(0));
     }
 
+    @Test
+    public void getPolicyForInformationType1() {
+        createTestdata(LEGAL_BASIS_DESCRIPTION1, PURPOSE_CODE1, PURPOSE_DESCRIPTION1, INFORMATION_TYPE_DESCRIPTION1,INFORMATION_TYPE_NAME, 100);
+
+        ResponseEntity<PagedResources<Policy>> responseEntity = restTemplate.exchange(
+                POLICY_REST_ENDPOINT + "policy?informationTypeId=" + "1", HttpMethod.GET, new HttpEntity<>(new HttpHeaders()), new ParameterizedTypeReference<PagedResources<Policy>>() {});
+        assertThat(responseEntity.getStatusCode(), is(HttpStatus.OK));
+        assertThat(responseEntity.getBody().getContent().size(), is(1));
+    }
+
     private void createTestdata(String legalBasisDescription, String purposeCode, String purposeDescription, String informationTypeDescription, String informationTypeName, int rows) {
         int i = 0;
         while (i < rows) {
@@ -191,7 +201,7 @@ public class PolicyControllerIT {
             purpose.setPurposeCode(purposeCode + i);
             purpose.setDescription(purposeDescription);
             purposeRepository.save(purpose);
-            InformationType informationType = informationTypeRepository.save(InformationType.builder().informationTypeId(new Long(i)).name(informationTypeName + i).description(informationTypeDescription).build());
+            InformationType informationType = informationTypeRepository.save(InformationType.builder().informationTypeId(Long.valueOf(i)).name(informationTypeName + i).description(informationTypeDescription).build());
             TestTransaction.flagForCommit();
             TestTransaction.end();
 
